# macboost

./: .bumpversion.cfg  .gitignore  LICENSE  Package.swift  README.md  RELEASING.md
.github/workflows/: ci.yml  python-publish.yml
Sources/MacBoost/: Binner.swift  Booster.swift  DataGen.swift  Dataset.swift  FeatureSelection.swift  MetalEngine.swift  SHAP.swift  Shaders.swift  Version.swift
Sources/MacBoostC/: CAPI.swift
Sources/MacBoostCLI/: CSV.swift  main.swift
Sources/bench/: main.swift
Tests/MacBoostTests/: FeatureTests.swift  GOSSTests.swift  LeafWiseTests.swift  MacBoostTests.swift  ObjectiveTests.swift  SelectionTests.swift
python/: README.md  pyproject.toml
python/macboost/: __init__.py  _core.py  _pyinfer.py  export.py
scripts/: bench_higgs.py  build_python.sh  build_wheel.sh  compare.py  test_cli.sh  test_python.py
