[project]
name = "macboost"
version = "1.0.0"
description = "Gradient boosted trees on Apple-silicon GPUs (Metal), sklearn-style API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["macboost"]

[tool.setuptools.package-data]
macboost = ["libmacboostc.dylib"]
